--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/texture.hpp
     ${PROJECT_SOURCE_DIR}/light.cpp
     ${PROJECT_SOURCE_DIR}/light.hpp
+    ${PROJECT_SOURCE_DIR}/hue.cpp
+    ${PROJECT_SOURCE_DIR}/hue.hpp
 
     ${PROJECT_SOURCE_DIR}/zlib/adler32.c
     ${PROJECT_SOURCE_DIR}/zlib/compress.c
@@ -98,6 +100,8 @@ add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/texture.hpp
     ${PROJECT_SOURCE_DIR}/light.cpp
     ${PROJECT_SOURCE_DIR}/light.hpp
+    ${PROJECT_SOURCE_DIR}/hue.cpp
+    ${PROJECT_SOURCE_DIR}/hue.hpp
 )
  
  
