--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/uomap.hpp
     ${PROJECT_SOURCE_DIR}/multi.cpp
     ${PROJECT_SOURCE_DIR}/multi.hpp
+    ${PROJECT_SOURCE_DIR}/sound.cpp
+    ${PROJECT_SOURCE_DIR}/sound.hpp
 
     ${PROJECT_SOURCE_DIR}/zlib/adler32.c
     ${PROJECT_SOURCE_DIR}/zlib/compress.c
@@ -110,6 +112,8 @@ add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/uomap.hpp
     ${PROJECT_SOURCE_DIR}/multi.cpp
     ${PROJECT_SOURCE_DIR}/multi.hpp
+    ${PROJECT_SOURCE_DIR}/sound.cpp
+    ${PROJECT_SOURCE_DIR}/sound.hpp
 )
  
  
