--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,79 +8,24 @@
 # cmake --build . --config Release
 # *************************************************************************
 
+# *************************************************************************
+# Define the versions, and options
+# *************************************************************************
+
 cmake_minimum_required(VERSION 3.24)
-project(uoutil VERSION 1.0 LANGUAGES CXX C)
+project(uoutil VERSION 1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
+
+if (WIN32)
+option(WITH_ZLIB "Build internal zlib" ON)
+else ()
 option(WITH_ZLIB "Build internal zlib" OFF)
+endif (WIN32)
 
 
 # *************************************************************************
 # The basic library we are making
 # *************************************************************************
-
-if (${WITH_ZLIB} OR WIN32)
-add_library(uoutil STATIC
-
-    ${PROJECT_SOURCE_DIR}/general.cpp
-    ${PROJECT_SOURCE_DIR}/general.hpp
-    ${PROJECT_SOURCE_DIR}/hash.cpp
-    ${PROJECT_SOURCE_DIR}/hash.hpp
-    ${PROJECT_SOURCE_DIR}/uop.cpp
-    ${PROJECT_SOURCE_DIR}/uop.hpp
-    ${PROJECT_SOURCE_DIR}/idx.cpp
-    ${PROJECT_SOURCE_DIR}/idx.hpp
-    ${PROJECT_SOURCE_DIR}/flag.cpp
-    ${PROJECT_SOURCE_DIR}/flag.hpp
-    ${PROJECT_SOURCE_DIR}/tile.cpp
-    ${PROJECT_SOURCE_DIR}/tile.hpp
-    ${PROJECT_SOURCE_DIR}/color.cpp
-    ${PROJECT_SOURCE_DIR}/color.hpp
-    ${PROJECT_SOURCE_DIR}/image.cpp
-    ${PROJECT_SOURCE_DIR}/image.hpp
-    ${PROJECT_SOURCE_DIR}/art.cpp
-    ${PROJECT_SOURCE_DIR}/art.hpp
-    ${PROJECT_SOURCE_DIR}/gump.cpp
-    ${PROJECT_SOURCE_DIR}/gump.hpp
-    ${PROJECT_SOURCE_DIR}/texture.cpp
-    ${PROJECT_SOURCE_DIR}/texture.hpp
-    ${PROJECT_SOURCE_DIR}/light.cpp
-    ${PROJECT_SOURCE_DIR}/light.hpp
-    ${PROJECT_SOURCE_DIR}/hue.cpp
-    ${PROJECT_SOURCE_DIR}/hue.hpp
-    ${PROJECT_SOURCE_DIR}/uomap.cpp
-    ${PROJECT_SOURCE_DIR}/uomap.hpp
-    ${PROJECT_SOURCE_DIR}/multi.cpp
-    ${PROJECT_SOURCE_DIR}/multi.hpp
-    ${PROJECT_SOURCE_DIR}/sound.cpp
-    ${PROJECT_SOURCE_DIR}/sound.hpp
-
-    ${PROJECT_SOURCE_DIR}/zlib/adler32.c
-    ${PROJECT_SOURCE_DIR}/zlib/compress.c
-    ${PROJECT_SOURCE_DIR}/zlib/crc32.c
-    ${PROJECT_SOURCE_DIR}/zlib/deflate.c
-    ${PROJECT_SOURCE_DIR}/zlib/gzclose.c
-    ${PROJECT_SOURCE_DIR}/zlib/gzlib.c
-    ${PROJECT_SOURCE_DIR}/zlib/gzread.c
-    ${PROJECT_SOURCE_DIR}/zlib/gzwrite.c
-    ${PROJECT_SOURCE_DIR}/zlib/infback.c
-    ${PROJECT_SOURCE_DIR}/zlib/inffast.c
-    ${PROJECT_SOURCE_DIR}/zlib/inflate.c
-    ${PROJECT_SOURCE_DIR}/zlib/inftrees.c
-    ${PROJECT_SOURCE_DIR}/zlib/trees.c
-    ${PROJECT_SOURCE_DIR}/zlib/uncompr.c
-    ${PROJECT_SOURCE_DIR}/zlib/zutil.c
-    ${PROJECT_SOURCE_DIR}/zlib/crc32.h
-    ${PROJECT_SOURCE_DIR}/zlib/deflate.h
-    ${PROJECT_SOURCE_DIR}/zlib/gzguts.h
-    ${PROJECT_SOURCE_DIR}/zlib/inffast.h
-    ${PROJECT_SOURCE_DIR}/zlib/inffixed.h
-    ${PROJECT_SOURCE_DIR}/zlib/inftrees.h
-    ${PROJECT_SOURCE_DIR}/zlib/trees.h
-    ${PROJECT_SOURCE_DIR}/zlib/zconf.h
-    ${PROJECT_SOURCE_DIR}/zlib/zlib.h
-    ${PROJECT_SOURCE_DIR}/zlib/zutil.h
-)
-else()
 add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/general.cpp
     ${PROJECT_SOURCE_DIR}/general.hpp
@@ -115,9 +60,10 @@ add_library(uoutil STATIC
     ${PROJECT_SOURCE_DIR}/sound.cpp
     ${PROJECT_SOURCE_DIR}/sound.hpp
 )
- 
- 
-endif()
+
+# *************************************************************************
+# Defines and switches
+# *************************************************************************
 
 if (WIN32)
 
@@ -133,10 +79,6 @@ if (WIN32)
         )
         
 else()
-    target_compile_options( uoutil PRIVATE
-        -Wno-implicit-function-declaration
-    )
-
         if (APPLE)
                 target_compile_options( uoutil PRIVATE
                         $<$<CONFIG:Release>:-Os>
@@ -147,14 +89,15 @@ else()
                 )
         endif()
 endif(WIN32)
+
+
 # *************************************************************************
 # the directories we need on the include path
 # *************************************************************************
 
+if (WITH_ZLIB)
 
-if (WITH_ZLIB OR WIN32)
-
-target_include_directories(uoutil PUBLIC
+target_include_directories(uoutil PRIVATE
         ${PROJECT_SOURCE_DIR}/zlib
 )
-endif()
+endif(WITH_ZLIB)
